--- a/config.toml
+++ b/config.toml
@@ -20,7 +20,7 @@ disqusShortname = "yourdiscussshortname"
     description = "David Dai's personal website"
     keywords = "blog,data science,personal"
     info = "Data Scientist"
-    avatarurl = "images/avatar.png"
+    avatarurl = "images/DavidDai_Headshot.png"
 
     #footercontent = "Enter a text here."
 
