--- a/config.toml
+++ b/config.toml
@@ -15,6 +15,9 @@ pygmentscodefencesguesssyntax = true
 
 disqusShortname = "yourdiscussshortname"
 
+[blackfriday]
+    hrefTargetBlank = true
+
 [params]
     author = "David Dai"
     description = "David Dai's personal website"
@@ -44,27 +47,25 @@ disqusShortname = "yourdiscussshortname"
     name = "Github"
     icon = "fab fa-github"
     weight = 1
-    url = "https://github.com/johndoe/"
-[[params.social]]
-    name = "Gitlab"
-    icon = "fab fa-gitlab"
-    weight = 2
-    url = "https://gitlab.com/johndoe/"
+    hrefTargetBlank = true
+    url = "https://github.com/dwhdai/"
 [[params.social]]
     name = "Twitter"
     icon = "fab fa-twitter"
     weight = 3
-    url = "https://twitter.com/johndoe/"
+    hrefTargetBlank = true
+    url = "https://twitter.com/dwhdai/"
 [[params.social]]
     name = "LinkedIn"
     icon = "fab fa-linkedin"
     weight = 4
-    url = "https://www.linkedin.com/in/johndoe/"
-[[params.social]]
-    name = "Medium"
-    icon = "fab fa-medium"
-    weight = 5
-    url = "https://medium.com/@johndoe"
+    hrefTargetBlank = true
+    url = "https://www.linkedin.com/in/dwhdai/"
+# [[params.social]]
+#     name = "Medium"
+#     icon = "fab fa-medium"
+#     weight = 5
+#     url = "https://medium.com/@johndoe"
 
 
 [languages]
