--- a/config.toml
+++ b/config.toml
@@ -33,7 +33,7 @@ disqusShortname = "yourdiscussshortname"
     hideCopyright = false
 
     # Git Commit in Footer, uncomment the line below to enable it.
-    commit = "https://github.com/luizdepra/hugo-coder/tree/"
+    #commit = "https://github.com/luizdepra/hugo-coder/tree/"
 
     rtl = false
 
@@ -43,29 +43,27 @@ disqusShortname = "yourdiscussshortname"
     # Custom CSS
     custom_css = []
 
+
 [[params.social]]
-    name = "Github"
-    icon = "fab fa-github"
+    name = "LinkedIn"
+    icon = "fab fa-linkedin"
     weight = 1
-    hrefTargetBlank = true
-    url = "https://github.com/dwhdai/"
+    url = "https://www.linkedin.com/in/dwhdai/"
+[[params.social]]
+    name = "Work"
+    icon = "fas fa-briefcase"
+    weight = 2
+    url = "https://www.chartdatascience.ca"
 [[params.social]]
     name = "Twitter"
     icon = "fab fa-twitter"
     weight = 3
-    hrefTargetBlank = true
     url = "https://twitter.com/dwhdai/"
 [[params.social]]
-    name = "LinkedIn"
-    icon = "fab fa-linkedin"
+    name = "Github"
+    icon = "fab fa-github"
     weight = 4
-    hrefTargetBlank = true
-    url = "https://www.linkedin.com/in/dwhdai/"
-# [[params.social]]
-#     name = "Medium"
-#     icon = "fab fa-medium"
-#     weight = 5
-#     url = "https://medium.com/@johndoe"
+    url = "https://github.com/dwhdai/"
 
 
 [languages]
@@ -78,50 +76,22 @@ disqusShortname = "yourdiscussshortname"
         url = "/about/"
 
         [[languages.en.menu.main]]
-        name = "Blog"
-        weight = 2
-        url = "/posts/"
+        name = "CV"
+        weight = 1
+        url = "/cv.pdf"
+        target = "_blank"
 
         [[languages.en.menu.main]]
-        name = "Projects"
-        weight = 3
-        url = "/projects/"
+        name = "Blog"
+        weight = 2
+        url = "/post/"
+
+        # [[languages.en.menu.main]]
+        # name = "Projects"
+        # weight = 3
+        # url = "/projects/"
 
         [[languages.en.menu.main]]
         name = "Contact me"
         weight = 5
         url = "/contact/"
-
-
-    [languages.pt-br]
-        languagename = "Português"
-        title = "João Ninguém"
-
-        [languages.pt-br.params]
-            author = "João Ninguém"
-            info = "Full Stack DevOps e Mágico"
-            description = "Sítio pessoal de João Ninguém"
-            keywords = "blog,desenvolvedor,pessoal"
-            footercontent = "Coloque algum texto aqui."
-
-        [languages.pt-br.menu]
-
-            [[languages.pt-br.menu.main]]
-            name = "Sobre"
-            weight = 1
-            url = "/pt-br/about/"
-
-            [[languages.pt-br.menu.main]]
-            name = "Blog"
-            weight = 2
-            url = "/pt-br/posts/"
-
-            [[languages.pt-br.menu.main]]
-            name = "Projetos"
-            weight = 3
-            url = "/pt-br/projects/"
-
-            [[languages.pt-br.menu.main]]
-            name = "Contato"
-            weight = 5
-            url = "/pt-br/contact/"
