--- a/config.toml
+++ b/config.toml
@@ -30,7 +30,7 @@ disqusShortname = "yourdiscussshortname"
     dateformat = "January 2, 2006"
 
     hideCredits = false
-    hideCopyright = false
+    hideCopyright = true
 
     # Git Commit in Footer, uncomment the line below to enable it.
     #commit = "https://github.com/luizdepra/hugo-coder/tree/"
@@ -38,7 +38,7 @@ disqusShortname = "yourdiscussshortname"
     rtl = false
 
     # Use inverted colors
-    inverted = false
+    inverted = true
 
     # Custom CSS
     custom_css = []
@@ -71,7 +71,7 @@ disqusShortname = "yourdiscussshortname"
         languagename = "English"
 
         [[languages.en.menu.main]]
-        name = "About"
+        name = "About Me"
         weight = 1
         url = "/about/"
 
