--- a/config.toml
+++ b/config.toml
@@ -76,9 +76,9 @@ disqusShortname = "yourdiscussshortname"
         url = "/about/"
 
         [[languages.en.menu.main]]
-        name = "CV"
+        name = "Resume"
         weight = 1
-        url = "/DavidDai_CV.pdf"
+        url = "/DavidDai_resume.pdf"
         target = "_blank"
 
         [[languages.en.menu.main]]
