--- a/config.toml
+++ b/config.toml
@@ -80,16 +80,16 @@ disqusShortname = "yourdiscussshortname"
         weight = 1
         url = "/DavidDai_resume.pdf"
         target = "_blank"
+        
+        [[languages.en.menu.main]]
+        name = "Projects"
+        weight = 2
+        url = "/projects/"
 
         [[languages.en.menu.main]]
         name = "Blog"
         weight = 2
         url = "/post/"
-
-        # [[languages.en.menu.main]]
-        # name = "Projects"
-        # weight = 3
-        # url = "/projects/"
 
         [[languages.en.menu.main]]
         name = "Contact me"
