--- a/config.toml
+++ b/config.toml
@@ -86,10 +86,10 @@ disqusShortname = "yourdiscussshortname"
         weight = 2
         url = "/projects/"
 
-        [[languages.en.menu.main]]
-        name = "Blog"
-        weight = 2
-        url = "/post/"
+        #[[languages.en.menu.main]]
+        #name = "Blog"
+        #weight = 2
+        #url = "/post/"
 
         [[languages.en.menu.main]]
         name = "Contact me"
