--- a/config.toml
+++ b/config.toml
@@ -81,15 +81,15 @@ disqusShortname = "yourdiscussshortname"
         url = "/DavidDai_resume.pdf"
         target = "_blank"
         
-        [[languages.en.menu.main]]
-        name = "Projects"
-        weight = 2
-        url = "/projects/"
-
         #[[languages.en.menu.main]]
-        #name = "Blog"
+        #name = "Projects"
         #weight = 2
-        #url = "/post/"
+        #url = "/projects/"
+
+        [[languages.en.menu.main]]
+        name = "Blog"
+        weight = 2
+        url = "https://blog.daviddai.ca"
 
         [[languages.en.menu.main]]
         name = "Contact me"
